--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,6 +4,8 @@
     align-items: center;
     background-color: orange;
     padding : 0.2em 0.5em;
+    border-bottom: 2px solid white;
+    z-index: 10;
 }
 
 #logo{
@@ -24,6 +26,7 @@
     gap : 3em;
     transition-duration: 400ms;
     transition-property: transform opacity;
+    z-index: 11;
 }
 
 .nav-show{
