--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root{
     --color1 : rgb(255, 230, 184);
-    --color2 : rgb(255, 180, 41);
+    --color2 : orangered;
 }
 
 *,*::after,*::after{
@@ -10,13 +10,13 @@
 }
 
 #root{
-    height: 100vh;
     overflow: hidden;
+    background-color: rgb(255, 219, 152);
 }
 
 .box{
     background-image: linear-gradient(to bottom right,var(--color1),var(--color2));
-    height: 40vh;
+    /* height: 40vh; */
 }
 
 .svg-img{
@@ -27,7 +27,24 @@
 h1{
     line-height: 1.6rem;
     letter-spacing: 5px;
+    /* margin-bottom: 0.4em; */
 }
+
+p{
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+h2{
+    font-size : 2rem;
+    letter-spacing: 3px;
+    color: orangered;
+    text-decoration: underline;
+    text-underline-offset: 3px;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
 
 @media screen and ( min-width : 480px ) {
     h1{
@@ -37,5 +54,11 @@ h1{
     }
     .svg-img{
         width: 60px;
+    }
+    p{
+        font-size: 2.2rem;
+    }
+    h2{
+        font-size: 3rem;
     }
 }
