--- a/src/index.css
+++ b/src/index.css
@@ -87,3 +87,13 @@ h2{
         width: 65vw;
     }
 }
+
+@media screen and ( min-width : 1300px ) {
+    .input{
+        width: 25vw;
+        font-size: 1.6rem;
+    }
+    .input:focus{
+        width: 40vw;
+    }
+}
